modules/sg-wp/main.tf

resource "aws_security_group" "wp_sg" {
  name        = "${var.prefix_name}-wp-sg-${var.prefix_env}"
  description = "Allow HTTP from ALB only"
  vpc_id      = var.vpc_id

  ingress {
    description     = "HTTP from ALB"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [var.alb_sg_id] 
  }
  ingress {
  description = "TEMP SSH from anywhere"
  from_port   = 22
  to_port     = 22
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.prefix_name}-wp-sg-${var.prefix_env}"
  }
}
